--- a/treatment_app/templates/base.html
+++ b/treatment_app/templates/base.html
@@ -120,6 +120,8 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    {% block extra_js %}{% endblock %}
+    {% block extra_js %}
+        <script src="{% static 'treatment_app/js/family_form.js' %}"></script>
+    {% endblock %}
 </body>
 </html>
