--- a/treatment_app/templates/treatment_app/family_form.html
+++ b/treatment_app/templates/treatment_app/family_form.html
@@ -72,20 +72,36 @@
 
                         <div class="row form-row" data-section="parent-details" style="display: none;">
                             <div class="col-md-4">
-                                {{ form.primary_parent_name|as_crispy_field }}
+                                {{ form.father_name|as_crispy_field }}
                             </div>
                             <div class="col-md-4">
-                                {{ form.primary_parent_phone|as_crispy_field }}
+                                {{ form.father_phone|as_crispy_field }}
                             </div>
                             <div class="col-md-4">
-                                {{ form.primary_parent_email|as_crispy_field }}
+                                {{ form.father_email|as_crispy_field }}
+                            </div>
+                        </div>
+
+                        <div class="row form-row" data-section="parent-details-mother" style="display: none;">
+                            <div class="col-md-4">
+                                {{ form.mother_name|as_crispy_field }}
+                            </div>
+                            <div class="col-md-4">
+                                {{ form.mother_phone|as_crispy_field }}
+                            </div>
+                            <div class="col-md-4">
+                                {{ form.mother_email|as_crispy_field }}
                             </div>
                         </div>
 
                         <div class="row form-row" data-section="parent-consent" style="display: none;">
-                            <div class="col-md-12">
-                                <h4 class="mt-4">טופס הסכמה</h4>
-                                {{ form.primary_parent_consent_form|as_crispy_field }}
+                            <div class="col-md-6">
+                                <h4 class="mt-4">טופס הסכמה אב</h4>
+                                {{ form.father_consent_form|as_crispy_field }}
+                            </div>
+                            <div class="col-md-6">
+                                <h4 class="mt-4">טופס הסכמה אם</h4>
+                                {{ form.mother_consent_form|as_crispy_field }}
                             </div>
                         </div>
 
@@ -98,7 +114,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label class="form-label">טופס הסכמה</label>
+                                    <label class="form-label">טופס הסכמה כללי</label>
                                     {% if form.instance.consent_form %}
                                         <div class="mb-2">
                                             <a href="{{ form.instance.consent_form.url }}" class="btn btn-sm btn-success" target="_blank">
@@ -106,7 +122,7 @@
                                             </a>
                                         </div>
                                     {% endif %}
-                                    {{ form.consent_form|as_crispy_field }}
+                                    {{ form.father_consent_form|as_crispy_field }}
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -119,7 +135,7 @@
                                             </a>
                                         </div>
                                     {% endif %}
-                                    {{ form.confidentiality_waiver|as_crispy_field }}
+                                    {{ form.mother_consent_form|as_crispy_field }}
                                 </div>
                             </div>
                         </div>
@@ -186,30 +202,27 @@
 document.addEventListener('DOMContentLoaded', function() {
     const familyStatusSelect = document.getElementById('id_family_status');
     const parentDetailsForms = document.querySelector('[data-section="parent-details"]');
+    const parentDetailsMotherForms = document.querySelector('[data-section="parent-details-mother"]');
     const parentConsentForms = document.querySelector('[data-section="parent-consent"]');
 
     function toggleParentDetailsForms() {
         if (familyStatusSelect.value === 'divorced' || familyStatusSelect.value === 'single_parent') {
             parentDetailsForms.style.display = 'block';
-        } else {
-            parentDetailsForms.style.display = 'none';
-        }
-    }
-
-    function toggleParentConsentForms() {
-        if (familyStatusSelect.value === 'divorced' || familyStatusSelect.value === 'single_parent') {
+            parentDetailsMotherForms.style.display = 'block';
             parentConsentForms.style.display = 'block';
         } else {
+            parentDetailsForms.style.display = 'none';
+            parentDetailsMotherForms.style.display = 'none';
             parentConsentForms.style.display = 'none';
         }
     }
 
+    // Initial call to set correct visibility on page load
+    toggleParentDetailsForms();
+
     familyStatusSelect.addEventListener('change', function() {
         toggleParentDetailsForms();
-        toggleParentConsentForms();
     });
-    toggleParentDetailsForms(); // Initial state
-    toggleParentConsentForms(); // Initial state
 });
 </script>
 {% endblock %}
